@@ -1,13 +1,13 @@
 ## texk/web2c/mfluajitdir/am/mfluajitlpeg.am: Makefile fragment for libmfluajitlpeg.
 ## 
-## Copyright (C) 2023 Luigi Scarso <tex-live@tug.org>
+## Copyright (C) 2023-2025 Luigi Scarso <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 
 ## mfluajitlpeg
 ##
 EXTRA_LIBRARIES += libmfluajitlpeg.a
 
-$(libmfluajitlpeg_a_OBJECTS): $(LUA_DEPEND)
+$(libmfluajitlpeg_a_OBJECTS): $(LUAJIT_DEPEND)
 
 libmfluajitlpeg_a_CPPFLAGS = \
 	-I$(top_srcdir)/mfluadir/luapeg \
